repackaged for use outside of this repo

--- a/notebooks/generate_KDE.ipynb
+++ b/notebooks/generate_KDE.ipynb
@@ -2,20 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This notebook uses the published version of the SNEMO eigenvectors and fits to the SNfactory data to generate KDEs\n",
+    "# This notebook uses the published version of the SNEMO eigenvectors and fits to the SNfactory data\n",
+    "# to generate KDEs\n",
     "import os\n",
     "import copy\n",
     "import pickle\n",
     "import sncosmo\n",
-    "import IDRTools\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from tqdm import tqdm\n",
+    "from snemo_gen import DATADIR\n",
     "from astropy.io import ascii\n",
     "from astropy.cosmology import WMAP9 as cosmo\n",
     "from sklearn.neighbors import KernelDensity\n",
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,16 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fits = pd.read_csv('../data/anon_snf_fits_published_snemo_and_salt.csv', index_col=0)"
+    "fits_path = os.path.join(DATADIR, 'anon_snf_fits_published_snemo_and_salt.csv')\n",
+    "fits = pd.read_csv(fits_path, index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +128,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>SN000</td>\n",
+       "      <th>SN000</th>\n",
        "      <td>0.076927</td>\n",
        "      <td>0.000762</td>\n",
        "      <td>1.732040e-06</td>\n",
@@ -150,7 +152,7 @@
        "      <td>-0.285872</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>SN001</td>\n",
+       "      <th>SN001</th>\n",
        "      <td>0.025047</td>\n",
        "      <td>0.002739</td>\n",
        "      <td>1.117447e-06</td>\n",
@@ -174,7 +176,7 @@
        "      <td>0.843408</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>SN002</td>\n",
+       "      <th>SN002</th>\n",
        "      <td>0.067370</td>\n",
        "      <td>0.001015</td>\n",
        "      <td>6.841256e-07</td>\n",
@@ -198,7 +200,7 @@
        "      <td>-0.338946</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>SN003</td>\n",
+       "      <th>SN003</th>\n",
        "      <td>0.081444</td>\n",
        "      <td>0.000782</td>\n",
        "      <td>2.185247e-06</td>\n",
@@ -222,7 +224,7 @@
        "      <td>-0.405733</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>SN004</td>\n",
+       "      <th>SN004</th>\n",
        "      <td>0.010187</td>\n",
        "      <td>0.042914</td>\n",
        "      <td>3.735027e-06</td>\n",
@@ -294,7 +296,7 @@
        "[5 rows x 69 columns]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +316,7 @@
        "216"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +353,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +816,8 @@
     "for model_name in ['salt2', 'snemo2', 'snemo7', 'snemo15']:\n",
     "    print(model_name)\n",
     "    kde, v, l, grid = calc_kde(model_name)\n",
-    "    pickle.dump(calc_kde(model_name), open('../data/{}_KDE_published.pkl'.format(model_name), 'wb'))"
+    "    pickle.dump(calc_kde(model_name),\n",
+    "                open(os.path.join(DATADIR, '{}_KDE_published.pkl'.format(model_name), 'wb'))"
    ]
   },
   {
@@ -857,7 +860,6 @@
     "model_name = 'snemo2'\n",
     "model = sncosmo.Model(model_name)\n",
     "kde, v, l, grid = calc_kde(model_name)\n",
-    "# kde, v, l, grid = pickle.load(open('../data/snemo15_KDE_published.pkl', 'rb'))\n",
     "samples = sample_kde(100, kde, v, l)\n",
     "plt.figure(figsize=(12, 4))\n",
     "plt.subplot(121)\n",
@@ -914,7 +916,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
